add: all page working properly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://api.whatsapp.com/send?phone=558894777444&text=Gostaria%20de%20falar%20sobre%20os%20impreendimentos%20da%20caltech%20Engenharia!" target="_blank"><ion-icon name="logo-whatsapp" class="whatsapp-icon"></ion-icon></a>
     </div>
     <div class="navbar-base">
-        <a href ="{% url 'landpage:homepage-view' %}" class="logo-img">
+        <a href ="index.html" class="logo-img">
             <img src="static/img/caltech-logo-xxsmall.png" alt="Logo da Caltech" draggable="false">
         </a>
     </div>
@@ -44,7 +44,7 @@
     <div class="mid-bar">
         <a href="https://api.whatsapp.com/send?phone=558894777444&text=Gostaria%20de%20falar%20sobre%20os%20impreendimentos%20da%20caltech%20Engenharia!"
             class="mid-bar-link-text" target="_blank">Whatsapp</a>
-        <a href="contactme.html" class="mid-bar-link-text" target="_blank">Envie uma mensagem</a>
+        <a href="contactme.html" class="mid-bar-link-text">Envie uma mensagem</a>
         <a href="https://www.google.com/maps/place/Ed.+Smart+Derby+-+Caltech+Engenharia/@-3.6823381,-40.3389929,15z/data=!4m2!3m1!1s0x0:0xe674467e104b13c8?sa=X&ved=2ahUKEwjt6avOqoz-AhVvCbkGHZcwDfcQ_BJ6BAhLEAg"
             class="mid-bar-link-text" target="_blank">Nossa localização</a>
     </div>
@@ -85,7 +85,7 @@
                     <span class="big-card-info-location">
                         <p><ion-icon name="location"></ion-icon> R. Irmã Síria, 60 - Derby Clube, Sobral - CE</p>
                     </span>                                                                                                                                                                                                                   
-                    <a href="{% url 'landpage:condominio-view' condominio_principal.pk %}" class="big-card-info-button" target="_blank">
+                    <a href="smartderby.html" class="big-card-info-button" target="_blank">
                         <p>
                             <ion-icon name="business"></ion-icon>Saiba mais
                         </p>
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="condominium-cards">
-        <a href="{% url 'landpage:condominio-view' condominio.pk %}" class="condominium-card">
+        <a href="derbyprime.html" class="condominium-card">
             <picture class="condominium-img">
                 <img src="static/img/miniature-img_ah80Ldm.jpg" alt="Imagem do condomínio" draggable="false">
             </picture>
@@ -117,7 +117,7 @@
                 <p><ion-icon name="location"></ion-icon>R. Dina Mendes, 631 - Derby Clube, Sobral - CE, 62042-220</p>
             </span>
          </a>
-         <a href="{% url 'landpage:condominio-view' condominio.pk %}" class="condominium-card">
+         <a href="edmundolinhares.html" class="condominium-card">
             <picture class="condominium-img">
                 <img src="static/img/miniature-img_DcZpYJd.jpg" alt="Imagem do condomínio" draggable="false">
             </picture>
@@ -138,7 +138,7 @@
                 <p><ion-icon name="location"></ion-icon>Av. Gerardo Rangel, 500 - Derby Clube, Sobral - CE, 62041-380</p>
             </span>
          </a>
-         <a href="{% url 'landpage:condominio-view' condominio.pk %}" class="condominium-card">
+         <a href="gustavobelchior.html" class="condominium-card">
             <picture class="condominium-img">
                 <img src="static/img/miniature-img_DcZpYJd.jpg" alt="Imagem do condomínio" draggable="false">
             </picture>
@@ -264,11 +264,10 @@
     </footer>
 
     <script src="js/script.js" target="_blank"></script>
-    <!-- Form integration script -->                                                                                                                                                                                                                                                                                     
-    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/32ddb43e-aa25-4b64-b333-bad73bc9c76c-loader.js"></script>                                                                                                                                                           
-    <!-- https://ionic.io/ionicons/usage -->                                                                                                                                                                                                                                                                             
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>                                                                                                                                                                                                                 
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>                                                                                                                                                                                                                          
-</body>                                                                                                                                                                                                                                                                                                                  
-                                                                                                                                                                                                                                                                                                                         
+    <!-- Form integration script -->
+    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/32ddb43e-aa25-4b64-b333-bad73bc9c76c-loader.js"></script>
+    <!-- https://ionic.io/ionicons/usage -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
 </html>
