--- a/contactme.html
+++ b/contactme.html
@@ -14,7 +14,7 @@
         <a href="https://api.whatsapp.com/send?phone=558894777444&text=Gostaria%20de%20falar%20sobre%20os%20impreendimentos%20da%20caltech%20Engenharia!" target="_blank"><ion-icon name="logo-whatsapp" class="whatsapp-icon"></ion-icon></a>
     </div>
     <div class="navbar-base">
-        <a href ="{% url 'landpage:homepage-view' %}" class="logo-img">
+        <a href ="index.html" class="logo-img">
             <img src="static/img/caltech-logo-xxsmall.png" alt="Logo da Caltech" draggable="false">
         </a>
     </div>
