--- a/index.html
+++ b/index.html
@@ -19,26 +19,28 @@
         </a>
     </div>
     <div class="first-container">
-        <form class="form-base" action="/" method="post">
+        <form class="form-base" action="https://api.staticforms.xyz/submit" method="post">
             <h1 class="form-title title-font medium-screen-title">
                 Venha investir ou morar no SMARTDERBY!
             </h1>
             <div class="form-content">
+  	        <input type="hidden" name="accessKey" value="b3163427-65aa-4751-bc28-d83648844c45"> <!-- Required -->
                 <label class="form-label" for="name"><ion-icon name="person"></ion-icon> Nome (4 a 8 caractéres)</label>
                 <input class="form-input" type="text" id="name" name="name" minlength="4" maxlength="60" size="64" required>
                 <label class="form-label" for="email"><ion-icon name="mail"></ion-icon> Email</label>
                 <input class="form-input" type="email" id="email" name="email" required>
                 <label class="form-label" for="phone"><ion-icon name="call"></ion-icon> Número</label>
                 <input class="form-input" type="tel" id="phone" name="phone" required>
-                <label class="form-label" for="time"><ion-icon name="time"></ion-icon> Qual o melhor horário para
-                    entrarmos em contato?</label>
-                <select class="form-time" name="time" id="time">
+                <label class="form-label" for="time"><ion-icon name="time"></ion-icon> 
+			Qual o melhor horário para entrarmos em contato?
+		</label>
+                <select class="form-time" name="$time" id="time">
                     <option value="manha">Manhã</option>
                     <option value="tarde">Tarde</option>
                     <option value="noite">Noite</option>
                 </select>
             </div>
-            <button class="form-button" type="submit">Enviar</button>
+            <button class="form-button" type="submit" value="Submit">Enviar</button>
         </form>
     </div>
     <div class="mid-bar">
@@ -85,7 +87,7 @@
                     <span class="big-card-info-location">
                         <p><ion-icon name="location"></ion-icon> R. Irmã Síria, 60 - Derby Clube, Sobral - CE</p>
                     </span>                                                                                                                                                                                                                   
-                    <a href="smartderby.html" class="big-card-info-button" target="_blank">
+                    <a href="smartderby.html" class="big-card-info-button">
                         <p>
                             <ion-icon name="business"></ion-icon>Saiba mais
                         </p>
