--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </span>
             <span class="condominium-desc">
                 <p>
-                    Prepare-se para conhecer um condomínio diferente de tudo o que você já viu. 
-		    O lançamento mais aguardado está chegando.
+		    Condomínio de alto padrão com estilo sofisticado, unidades luxuosas, comodidades 
+		    incomparáveis e localização privilegiada. Viva uma experiência única.
                 </p>
             </span>
             <span class="condominium-address">
@@ -220,6 +220,7 @@
             </span>
         </div>
         <form class="help-me-form" action="/" method="post">
+  	    <input type="hidden" name="accessKey" value="b3163427-65aa-4751-bc28-d83648844c45"> <!-- Required -->
             <label class="form-label" for="name"><ion-icon name="person"></ion-icon> Nome Completo:</label>
             <input class="form-input" type="text" id="name" name="name" minlength="4" maxlength="60" size="64" required>
             <label class="form-label" for="email"><ion-icon name="mail"></ion-icon> Email:</label>
@@ -227,14 +228,14 @@
             <label class="form-label" for="phone"><ion-icon name="call"></ion-icon> Número:</label>
             <input class="form-input" type="tel" id="phone" name="phone" required>
             <label class="form-label" for="time"><ion-icon name="business"></ion-icon> Assunto:</label>
-            <select class="form-time" name="time" id="time">
+            <select class="form-time" name="$condominium" id="condominium">
                 <option value="smart_derby">Smart Derby</option>
                 <option value="edmundo_linhares">Edmundo Linhares</option>
                 <option value="derby_prime">Derby Prime</option>
                 <option value="gustavo_belchior">Gustavo Belchior</option>
             </select>
             <label class="form-label" for="time"><ion-icon name="people"></ion-icon> Já é cliente Caltech?</label>
-            <select class="form-time" name="time" id="time">
+            <select class="form-time" name="$time" id="time">
                 <option value="manha">Sim</option>
                 <option value="tarde">Não</option>
             </select>
@@ -271,32 +272,5 @@
     <!-- https://ionic.io/ionicons/usage -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script>
-	const form = document.getElementById('lead-form');
-	form.addEventListener('submit', (event) => {
-	  // prevent the default form submission behavior
-	  event.preventDefault();
-
-	  // get the form data as a URL-encoded string
-	  const formData = new URLSearchParams(new FormData(form)).toString();
-
-	  // send the form data to the server
-	  fetch('/submit-form', {
-	    method: 'POST',
-	    body: formData,
-	    headers: {
-	      'Content-Type': 'application/x-www-form-urlencoded'
-	    }
-	  })
-	  .then(() => {
-	    // redirect the user back to the index.html file
-	    window.location.href = 'index.html';
-	  })
-	  .catch((error) => {
-	    console.error(error);
-	  });
-	});
-    </script>
-
 </body>
 </html>
