fix: form action working

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
             </span>
         </div>
-        <form class="help-me-form" action="/" method="post">
+        <form class="help-me-form" action="https://api.staticforms.xyz/submit" method="post">
   	    <input type="hidden" name="accessKey" value="b3163427-65aa-4751-bc28-d83648844c45"> <!-- Required -->
             <label class="form-label" for="name"><ion-icon name="person"></ion-icon> Nome Completo:</label>
             <input class="form-input" type="text" id="name" name="name" minlength="4" maxlength="60" size="64" required>
