fix: condominium texts formatted

--- a/derbyprime.html
+++ b/derbyprime.html
@@ -56,19 +56,9 @@
 		    Derby Prime
             </h2>
             <p class="condominium-details-main-text-desc">
-    	        Bem-vindo ao nosso condomínio de alto padrão! Aqui você encontrará um estilo de vida sofisticado e elegante, em um ambiente de luxo e conforto incomparáveis.<br><br>
-		Nossas unidades foram projetadas com o mais alto nível de qualidade, desde acabamentos finos e detalhes luxuosos até a variedade 
-		de comodidades para atender a todas as necessidades dos moradores. A partir das amplas varandas com vista panorâmica, até as espaçosas 
-		cozinhas gourmet, tudo foi cuidadosamente planejado para proporcionar uma experiência de vida única.
-		Localizado em uma das áreas mais exclusivas da cidade, nosso condomínio oferece uma localização privilegiada, 
-		perto de faculdades de prestígio, supermercados e hospitais renomados.<br><br>
-		Além disso, a poucos minutos de distância, você encontrará algumas das melhores opções de restaurantes, lojas e bares da cidade.
-		Nossas comodidades são incomparáveis. Aproveite a piscina aquecida, a academia de última geração, o salão de 
-		jogos e o espaço para eventos, onde os moradores podem celebrar momentos especiais com seus amigos e familiares.
-		Estamos comprometidos em oferecer aos nossos moradores uma experiência de vida excepcional, mantendo os mais altos 
-		padrões de qualidade e serviço.<br><br>
-		Se você está procurando um estilo de vida luxuoso e conveniente em uma das melhores 
-		localizações da cidade, o nosso condomínio é o lugar certo para você. Venha nos visitar e descubra o que temos a oferecer!
+	    Edificio Derby Primer, construido há mais de 05 anos o Derby primer conta com: 
+	    área fitness, salão de  festas, área de lazer para você e as crianças, garagem com duas vagas, 
+	    portaria 24 horas e está localizado em dos melhores bairros de Sobral! Venha nos conhecer!
             </p>
         </article>
     </div> 
