--- a/gustavobelchior.html
+++ b/gustavobelchior.html
@@ -56,16 +56,13 @@
 		    Gustavo Belchior
             </h2>
             <p class="condominium-details-main-text-desc">
-                Bem-vindo ao nosso condomínio acolhedor e familiar, onde cada casa é um lar feliz. Com 2 garagens e 4 quartos, nossas 
-		residências espaçosas oferecem muito espaço para toda a família.
-		Cada unidade é projetada para ser confortável e funcional, com espaçosos quartos, amplas janelas e acabamentos 
-		de qualidade. Nossas cozinhas bem equipadas são ideais para cozinhar refeições deliciosas e compartilhá-las com a família e amigos.<br><br>
-		Nosso condomínio oferece uma variedade de comodidades, incluindo uma piscina refrescante, uma academia para os moradores manterem a forma e 
-		um parque infantil seguro e divertido para as crianças brincarem.<br><br>
-		Além disso, nosso condomínio é cercado por áreas verdes bem cuidadas, proporcionando um ambiente tranquilo e relaxante para os moradores desfrutarem.
-		Nossa localização também é ideal para famílias. Estamos perto de escolas de qualidade, restaurantes e lojas, oferecendo conveniência e praticidade para o dia a dia.
-		Se você procura um condomínio aconchegante e familiar, onde sua família possa crescer e prosperar, não procure mais.<br><br>
-		Venha conhecer nossas residências e descubra o que significa viver em um verdadeiro lar. Estamos ansiosos para recebê-lo!
+	    Bem-vindo ao nosso condomínio acolhedor e familiar. Com 2 garagens e 4 quartos, nossos 
+	    apartamentos  espaçosos oferecem muito conforto para toda a família.<br><br>
+	    Nosso condomínio oferece uma variedade de comodidades, incluindo academia e um parque 
+	    infantil seguro e divertido para as crianças brincarem.<br><br>
+	    Nossa localização também é ideal para famílias. Estamos perto de escolas, 
+	    restaurantes e lojas, oferecendo conveniência e praticidade para o dia a dia. 
+	    Se você procura um condomínio aconchegante e familiar, então venha nos fazer uma visita! Estamos ansiosos para recebê-lo!
             </p>
         </article>
     </div> 
