--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                     </span>
                     <span class="big-card-info-desc">
                         <p>
-			    Inspirado em você, esse é um dos condomínios com mais sofisticação de Sobral, 
-			    ele é a opção ideal para quem busca comodidade, lazer e segurança. Sua posição 
-			    em um ponto estratégico da cidade é a perfeição para quem é universitário e busca 
-			    mais rapidez de acesso a supermercados, hospitais e restaurantes. Além disso, nosso 
-			    condomínio conta com uma ótima área de lazer, bicicletário, academia, escada cooper e muito mais!
+			Descubra um estilo de vida sofisticado e moderno no Smart Derby, um dos edifícios 
+			mais desejados para morar em Sobral.<br><br>
+			Situado em uma área estratégica, o Smart Derby apresenta apartamentos espaçosos e 
+			elegantes com acabamentos de alta qualidade e vistas deslumbrantes da nossa querida Sobral. 
+			Não perca a oportunidade de morar no Smart Derby e experimentar o melhor com conforto e lazer.
 			</p>
                     </span>
                     <span class="big-card-info-location">
@@ -89,7 +89,7 @@
                     </span>                                                                                                                                                                                                                   
                     <a href="smartderby.html" class="big-card-info-button">
                         <p>
-                            <ion-icon name="business"></ion-icon>Saiba mais
+                            <ion-icon name="business"></ion-icon> Saiba mais
                         </p>
                     </a>                                                                                                                                                                                                                      
                 </article>                                                                                                                                                                                                                    
@@ -111,8 +111,8 @@
             </span>
             <span class="condominium-desc">
                 <p>
-		    Condomínio de alto padrão com estilo sofisticado, unidades luxuosas, comodidades 
-		    incomparáveis e localização privilegiada. Viva uma experiência única.
+		O Derby Prime tem tudo: área fitness, salão de festas, lazer para crianças,
+		e portaria 24h. Venha nos visitar!
                 </p>
             </span>
             <span class="condominium-address">
