--- a/smartderby.html
+++ b/smartderby.html
@@ -56,11 +56,10 @@
 		    Smart Derby
             </h2>
             <p class="condominium-details-main-text-desc">
-	        Inspirado em você, esse é um dos condomínios com mais sofisticação de Sobral, ele é a opção ideal para quem busca comodidade, 
-		lazer e segurança. Sua posição em um ponto estratégico da cidade é a perfeição para quem é universitário e busca mais rapidez 
-		de acesso a supermercados, hospitais e restaurantes.<br><br>
-		Além disso, nosso condomínio conta com uma ótima área de lazer, bicicletário, 
-		academia, escada cooper e muito mais!
+	    Nada melhor do que a sensação de morar em um lugar que foi projetado pensando especialmente em você!
+	    Assim é o Smart Derby, um prédio com diversas áreas a serem aproveitadas por você e sua família, 
+	    comodidade e conforto para todos.<br><br>
+	    Venha você também ser feliz no Smart Derby! Venha nos fazer uma visita!
             </p>
         </article>
     </div> 
