fix: derbyprime text updated

--- a/derbyprime.html
+++ b/derbyprime.html
@@ -56,9 +56,9 @@
 		    Derby Prime
             </h2>
             <p class="condominium-details-main-text-desc">
-	    Edificio Derby Primer, construido há mais de 05 anos o Derby primer conta com: 
-	    área fitness, salão de  festas, área de lazer para você e as crianças, garagem com duas vagas, 
-	    portaria 24 horas e está localizado em dos melhores bairros de Sobral! Venha nos conhecer!
+	    Edificio Derby Primer, construido há mais de 05 anos, o prédio conta com: área fitness, 
+	    salão de festas, área de lazer para você e as crianças, garagem com duas vagas, portaria 
+	    24 horas e está localizado em dos melhores bairros de Sobral! Venha nos conhecer!
             </p>
         </article>
     </div> 
