--- a/derbyprime.html
+++ b/derbyprime.html
@@ -36,7 +36,7 @@
         <div class="condominium-details-main-tags">
             <span class="condominium-details-main-tags-info">
                 <ion-icon name="scan-circle-outline" class="condominium-details-main-tags-icons"></ion-icon>
-                <p>85,50m²</p>
+                <p>85,55m²</p>
             </span>
             <span class="condominium-details-main-tags-info">
                 <ion-icon name="bed-outline" class="condominium-details-main-tags-icons"></ion-icon>
@@ -56,7 +56,7 @@
 		    Derby Prime
             </h2>
             <p class="condominium-details-main-text-desc">
-	    Edificio Derby Primer, construido há mais de 05 anos, o prédio conta com: área fitness, 
+	    Edificio Derby Prime, construido há mais de 05 anos, o prédio conta com: área fitness, 
 	    salão de festas, área de lazer para você e as crianças, garagem com duas vagas, portaria 
 	    24 horas e está localizado em dos melhores bairros de Sobral! Venha nos conhecer!
             </p>
