--- a/gustavobelchior.html
+++ b/gustavobelchior.html
@@ -56,11 +56,8 @@
 		    Gustavo Belchior
             </h2>
             <p class="condominium-details-main-text-desc">
-	    Bem-vindo ao nosso condomínio acolhedor e familiar. Com 2 garagens e 4 quartos, nossos 
-	    apartamentos  espaçosos oferecem muito conforto para toda a família.<br><br>
-	    Nosso condomínio oferece uma variedade de comodidades, incluindo academia e um parque 
-	    infantil seguro e divertido para as crianças brincarem.<br><br>
-	    Nossa localização também é ideal para famílias. Estamos perto de escolas, 
+	    Nosso condomínio oferece uma variedade de comodidades, incluindo academia, salão de festas e sala de jogos.<br><br>
+	    O condomínio fica localizado perto de escolas, 
 	    restaurantes e lojas, oferecendo conveniência e praticidade para o dia a dia. 
 	    Se você procura um condomínio aconchegante e familiar, então venha nos fazer uma visita! Estamos ansiosos para recebê-lo!
             </p>
