--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
             </span>
             <span class="condominium-desc">
                 <p>
-		    Descubra um estilo de vida exclusivo em nosso condomínio de alto padrão, com infraestrutura 
-		    completa e áreas de lazer para toda a família desfrutar.
+		    Descubra um estilo de vida exclusivo em nosso condomínio, com infraestrutura 
+		    completa para você e sua família.
                 </p>
             </span>
             <span class="condominium-address">
-                <p><ion-icon name="location"></ion-icon>Av. Dr. Guarani, 115 - Centro, Sobral - CE, 62010-330</p>
+                <p><ion-icon name="location"></ion-icon>Av. Dr. Guarani, 115 - Derby Clube, Sobral - CE, 62041-380</p>
             </span>
          </a>
     </div>
