--- a/contactme.html
+++ b/contactme.html
@@ -111,7 +111,7 @@
     <!-- Avoid JSON file to be shown to user -->
     <script>
 	    $(document).ready(function() {
-	    $('#myForm').submit(function(event) {
+	    $('#lead-form').submit(function(event) {
 	    event.preventDefault(); // Prevent the form from submitting normally
 	    
 	    var form = $(this);
@@ -124,12 +124,12 @@
 	      dataType: 'json',
 	      success: function(data) {
 		// Handle the success response (e.g., show a success message)
-		alert('Form submitted successfully!');
-		window.location.href = 'main-page.html'; // Redirect to the main page
+		alert('Formulário enviado com sucesso!');
+		window.location.href = 'index.html'; // Redirect to the main page
 	      },
 	      error: function(xhr, status, error) {
 		// Handle the error response (e.g., show an error message)
-		alert('An error occurred while submitting the form. Please try again later.');
+		alert('Um erro ocorreu ao enviar o formulário, tente novamente mais tarde!');
 	      }
 	    });
 	    });
